Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1479 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,13 +5,13 @@
   * *[Start Introduction]*
   * *[OMUsage Simulations]*
     * [SetupOverview Getting started (local simulations)]
-      * [Binaries Pre-compiled binaries]
-      * [UtilsWindows Useful utilities on Windows]
     * [ScenarioDesign Scenario design]
       * [XmlEntoVector Vector-transmission parameters]
     * [OutputFormats Results]
       * [OutputFiles File formats]
     * Tools
+      * [Binaries OpenMalariaTools]
+      * [UtilsWindows Useful utilities on Windows]
       * [XmlUpdateScenario Updating schema version]
       * LiveGraph
     * References
