--- a/wiki/openmalariaTools.wiki
+++ b/wiki/openmalariaTools.wiki
@@ -4,11 +4,22 @@ A GUI frontend for managing, creating and running local experiments.
 
 openmalariaTools is a GUI created for an easier interaction with the openmalaria scientific application. Instead of putting different commands in a terminal the user just chooses his options in the GUI.
 
-Please be aware that openmalariaTools needs for some functionalities that java sdk or jdk is installed on your operating system. 
+OpenmalariaTools is developed as a cross-platform application using [http://www.python.org Python] and [http://pygtk.org PyGTK]. For some of its features, openmalariaTools requires a Java run-time environment.
 
 = Downloads =
 
-Please see the [Binaries] page.
+OpenmalariaTools is currently in beta stage 3. It runs on both Linux and Windows, but currently not on the Mac OS due to the unavailability of PyGTK natively on the Mac.
+
+The beta 3 release uses schema version 21 and has been packaged with an installer for windows. To use:
+
+  * Make sure a [http://www.java.com/en/download/ Java run-time environment] is installed.
+  * Download and run the [http://openmalaria.googlecode.com/svn/download/openmalariaTools/openmalariaTools-V00.03/win32/openMalariaTools_installer_v00.03.exe Windows (32-bit) openmalariaTools installer]
+
+Alternatively, one can install from source (familiarity with [http://subversion.apache.org/ subversion] or [http://tortoisesvn.tigris.org/ TortoiseSVN] assumed).
+
+  * Make sure a Java run-time environment, python and PyGTK are installed.
+  * Check out the sources: `svn checkout http://openmalaria.googlecode.com/svn/application_deployment OpenmalariaTools`
+  * Potentially replace the `application/openMalaria[.exe]` binary.
 
 = Features =
 
@@ -42,4 +53,3 @@ Run some scenarios:
 
 ||*editor*||*experiment creator*||
 ||<a href="http://openmalaria.googlecode.com/svn/application_deployment/screenshots/beta_3/editor.jpg"><img src="http://openmalaria.googlecode.com/svn/application_deployment/screenshots/beta_3/editor.jpg" width="600"/></a>||<a href="http://openmalaria.googlecode.com/svn/application_deployment/screenshots/beta_3/experiment_creator.jpg"><img src="http://openmalaria.googlecode.com/svn/application_deployment/screenshots/beta_3/experiment_creator.jpg" width="600"/></a>||
-
