Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1490 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,12 +5,14 @@
   * *[Start Introduction]*
   * *[OMUsage Simulations]*
     * [SetupOverview Getting started (local simulations)]
+      * [openmalariaTools OpenMalariaTools]
+      * [Binaries Compiled executables]
+      * [BuildSystem Building from source]
     * [ScenarioDesign Scenario design]
       * [XmlEntoVector Vector-transmission parameters]
     * [OutputFormats Results]
       * [OutputFiles File formats]
     * Tools
-      * [Binaries OpenMalariaTools]
       * [UtilsWindows Useful utilities on Windows]
       * [XmlUpdateScenario Updating schema version]
       * LiveGraph
