--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -14,6 +14,7 @@
       * [OutputFiles File formats]
     * Tools
       * [UtilsWindows Useful utilities on Windows]
+      * [UtilsRunning Running tests and scenarios]
       * [XmlUpdateScenario Updating schema version]
       * LiveGraph
     * References
