--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -9,9 +9,10 @@
       * [Binaries Compiled executables]
       * [BuildSystem Building from source]
     * [ScenarioDesign Scenario design]
+      * [Monitoring Monitoring systems]
       * [XmlEntoVector Vector-transmission parameters]
-    * [OutputFormats Results]
-      * [OutputFiles File formats]
+      * [ModelInterventions Interventions]
+    * [OutputFiles Output formats]
     * Tools
       * [UtilsWindows Useful utilities on Windows]
       * [UtilsRunning Running tests and scenarios]
