Edited wiki page LiveGraph through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1506 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/LiveGraph.wiki
+++ b/wiki/LiveGraph.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-[http://www.live-graph.org/ LiveGraph] is a useful graph-plotting program that can directly plot openmalaria's [OutputFiles#ctsout.txt continuous output] files (other than this, it has nothing to do with openmalaria).
+[http://www.live-graph.org/ LiveGraph] is a useful graph-plotting program that can directly plot openmalaria's [Monitoring#Continuous continuous output] files (other than this, it has nothing to do with openmalaria).
 
 
 == Installing ==
